packages/webassemblyjs/test/fixtures/type-errors/select-mixed/module.wast
(module
	(func
		(f64.const 0)
		(f32.const 1)
		(i32.const 0)
		(select)
		(drop)
	)
)
